--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/node-cron": "^3.0.9",
     "@types/tough-cookie": "^4.0.2",
     "axios": "^1.5.0",
     "discord.js": "^14.13.0",
+    "mongoose": "^7.5.3",
+    "node-cron": "^3.0.2",
+    "node-html-parser": "^6.1.10",
     "tough-cookie": "^4.1.3"
   }
 }
