--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^7.5.3",
     "node-cron": "^3.0.2",
     "node-html-parser": "^6.1.10",
+    "sharp": "^0.32.6",
     "tough-cookie": "^4.1.3"
   }
 }
