--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "bunbot",
   "module": "index.ts",
-  "type": "module",
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "tsx": "^4.5.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/heic-convert": "^1.2.3",
     "@types/node-cron": "^3.0.9",
     "@types/tough-cookie": "^4.0.2",
     "axios": "^1.5.0",
     "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1",
+    "heic-convert": "^2.0.0",
+    "heic2any": "^0.0.4",
+    "jimp": "^0.22.10",
     "mongoose": "^7.5.3",
     "node-cron": "^3.0.2",
     "node-html-parser": "^6.1.10",
